# CalendarApp

./: CMakeLists.txt
EventService/: CMakeLists.txt  Event.cpp  EventService.cpp  EventService.h
EventService/lib/: json.hpp
include/: EventService.h
lib/: libEventService.dylib
resources/: events.json  style.qss
src/: main.cpp
src/CalendarService/: CalendarService.h
src/CalendarWidget/: CalendarWidget.cpp  CalendarWidget.h
src/Event/: Event.cpp  Event.h  Priority.cpp
src/EventService/: EventService.cpp  EventService.h
src/NewEventDialog/: NewEventDialog.cpp  NewEventDialog.h
src/TopBar/: TopBar.cpp  TopBar.h
src/app/: main.cpp
src/app/CalendarService/: CalendarService.cpp  CalendarService.h
src/app/CalendarWidget/: CalendarWidget.cpp  CalendarWidget.h
src/app/Event/: Event.cpp
src/app/NewEventDialog/: NewEventDialog.cpp  NewEventDialog.h
src/app/TopBar/: TopBar.cpp  TopBar.h
src/components/CalendarWidget/: CalendarWidget.cpp  CalendarWidget.h
src/components/ErrorDialog/: ErrorDialog.cpp  ErrorDialog.h
src/components/EventTable/: EventTable.cpp  EventTable.h
src/components/EventsListDialog/: EventsListDialog.cpp  EventsListDialog.h
src/components/NewEventDialog/: NewEventDialog.cpp  NewEventDialog.h
src/components/TopBar/: TopBar.cpp  TopBar.h
src/model/Event/: Event.cpp  Event.h
src/resources/: style.qss
src/services/CalendarService/: CalendarService.cpp
src/services/EventService/: EventService.cpp  EventService.h
src/services/StylesService/: StylesService.cpp  StylesService.h
